--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-uuid": "^2.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
